etaからJava SEのAPIを呼び出し

--- a/first-eta-sample/first-eta-sample.cabal
+++ b/first-eta-sample/first-eta-sample.cabal
@@ -49,19 +49,19 @@ cabal-version:       >=1.10
 executable first-eta-sample
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
-  
+
   -- Modules included in this executable, other than Main.
-  -- other-modules:       
-  
+  other-modules:       Java.Io.File       
+
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
-  
+
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.8 && <4.9
-  
+
   -- Directories containing source files.
   hs-source-dirs:      src
-  
+
   -- Base language which the package is written in.
   default-language:    Haskell2010
-  
+
